--- a/assets/scss/_slides-carousel.scss
+++ b/assets/scss/_slides-carousel.scss
@@ -1,70 +1,147 @@
+* {
+  box-sizing: border-box;
+}
+
+// .slides {
+//   position: relative;
+//   height: 150px;
+//   padding: 0px;
+//   margin: 0px;
+//   list-style-type: none;
+//   margin-bottom: 1em;
+// }
+
+// .slide {
+//   position: absolute;
+//   left: 0px;
+//   top: 0px;
+//   width: 100%;
+//   height: 100%;
+//   opacity: 0;
+//   z-index: 1;
+//   transition: opacity 1s;
+// }
+
+// .active {
+//   opacity: 1;
+//   z-index: 2;
+// }
+
+// .slide:nth-of-type(1) {
+// }
+
+// .slide:nth-of-type(2) {
+//   background: orange;
+// }
+
+// .slide:nth-of-type(3) {
+//   background: green;
+// }
+
+// .slide:nth-of-type(4) {
+//   background: blue;
+// }
+
+// .slide:nth-of-type(5) {
+//   background: purple;
+// }
+
+.carousel {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Высота на весь экран */
+  overflow: hidden;
+}
+
 .slides {
   position: relative;
-  height: 150px;
-  padding: 0px;
-  margin: 0px;
-  list-style-type: none;
-  margin-bottom: 1em;
+  width: 100%;
+  height: 100%;
 }
 
 .slide {
   position: absolute;
-  left: 0px;
-  top: 0px;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
-  z-index: 1;
-  transition: opacity 1s;
+  opacity: 0; /* Прячем все слайды */
+  transition: opacity 0.5s ease-in-out;
 }
 
-.active {
-  opacity: 1;
-  z-index: 2;
+.slide.active {
+  opacity: 1; /* Только активный слайд виден */
 }
 
-/*
-non-essential styles:
-just for appearance; change whatever you want
-*/
-
-.slide {
-  // font-size: 40px;
-  // padding: 40px;
-  // box-sizing: border-box;
-  // background: #333;
-  // color: #fff;
-  // margin-top: 60px; /* Отступ, чтобы слайдер не перекрывался фиксированным header */
+.slide-content {
+  display: flex;
   width: 100%;
-  height: 500px; /* Высота слайдера */
-  background-color: #f0f0f0;
+  height: 100%;
+  gap: 0;
 }
 
-.slide:nth-of-type(1) {
+.text-block-1 {
+  width: 50%;
+  background: #1c5327;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 
-.slide:nth-of-type(2) {
-  background: orange;
+.text-block-2 {
+  width: 50%;
+  background: #1c5327;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
 }
 
-.slide:nth-of-type(3) {
-  background: green;
+.text-block-3 {
+  width: 50%;
+  background: #1c5327;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
 }
 
-.slide:nth-of-type(4) {
-  background: blue;
+.image-block {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.slide:nth-of-type(5) {
-  background: purple;
+.image-block img {
+  width: 75%;
+  height: 100%;
+}
+
+.text-block,
+.image-block {
+  width: 50%;
+  padding: 0; /* Убираем внутренние отступы */
+  margin: 0; /* Убираем внешние отступы */
 }
 
 /*custom*/
 .indicators,
 .controls {
+  position: absolute;
   display: flex;
   gap: 1em;
   margin-bottom: 1em;
+  bottom: 10px; /* Смещаем вниз */
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .indicator,
