--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -5,7 +5,7 @@
 .header {
   position: absolute;
   width: 100%;
-  top: 0;
+  top: 24px;
   left: 0;
   z-index: 1000;
   transition: background-color 0.3s ease;
@@ -147,7 +147,7 @@
 /* При наведении на header — чёрный */
 .header:hover .search-input::placeholder {
   color: black;
-  transition: color 0.3s ease;
+  transition: color 0.2s ease;
 }
 
 /* При наведении на меню — всё черное */
