--- a/assets/scss/_slides-carousel.scss
+++ b/assets/scss/_slides-carousel.scss
@@ -49,7 +49,7 @@
 .carousel {
   position: relative;
   width: 100%;
-  height: 100vh; /* Высота на весь экран */
+  height: 90vh; /* Высота на весь экран */
   overflow: hidden;
 }
 
@@ -66,7 +66,7 @@
   width: 100%;
   height: 100%;
   opacity: 0; /* Прячем все слайды */
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.4s ease-in-out;
 }
 
 .slide.active {
@@ -88,12 +88,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
 }
 
 .text-block-2 {
   width: 50%;
-  background: #1c5327;
+  background: #948982;
   color: white;
   display: flex;
   flex-direction: column;
@@ -104,7 +104,29 @@
 
 .text-block-3 {
   width: 50%;
-  background: #1c5327;
+  background: #526071;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+.text-block-4 {
+  width: 50%;
+  background: #ced77b;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+.text-block-5 {
+  width: 50%;
+  background: #dbadc2;
   color: white;
   display: flex;
   flex-direction: column;
@@ -121,7 +143,7 @@
 }
 
 .image-block img {
-  width: 75%;
+  width: 100%;
   height: 100%;
 }
 
