--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 .header {
-  position: absolute;
+  position: fixed;
   z-index: 1000;
-  top: 24px;
+  top: 0;
   left: 0;
 
   width: 100%;
@@ -22,7 +22,7 @@
   justify-content: space-between;
 
   width: 100%;
-  padding: 20px 30px;
+  padding: 0 20px;
 }
 .header-logo a {
   margin-left: 0;
@@ -88,6 +88,8 @@
   justify-content: space-between;
 
   width: 100%;
+  height: 100px;
+  padding: 0, 20px;
 }
 
 .menu-item {
@@ -291,6 +293,7 @@
 
 .carousel {
   position: relative;
+  top: 0;
 
   overflow: hidden;
 
@@ -303,6 +306,8 @@
 
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .slide {
@@ -330,8 +335,6 @@
 
   width: 100%;
   height: 100%;
-
-  gap: 0;
 }
 
 .text-block-1 {
@@ -465,6 +468,8 @@
 
 .text-block,
 .image-block {
+  top: 0;
+
   width: 50%;
   margin: 0;
   padding: 0;
@@ -512,14 +517,13 @@
 .indicator.active {
   background-color: tomato;
 }
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-.container {
-  display: block;
-
-  unicode-bidi: isolate;
+body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
