--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -3,9 +3,9 @@
 @use 'mixins-media' as *;
 /* Стили для header */
 .header {
-  position: absolute;
+  position: fixed;
   width: 100%;
-  top: 24px;
+  top: 0px;
   left: 0;
   z-index: 1000;
   transition: background-color 0.3s ease;
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 30px;
+    padding: 0px 20px;
     width: 100%;
   }
 
@@ -61,6 +61,8 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  height: 100px;
+  padding: 0px, 20px;
 }
 
 .menu-item {
