--- a/assets/scss/_slides-carousel.scss
+++ b/assets/scss/_slides-carousel.scss
@@ -47,6 +47,7 @@
 // }
 
 .carousel {
+  top: 0;
   position: relative;
   width: 100%;
   height: 90vh; /* Высота на весь экран */
@@ -57,6 +58,8 @@
   position: relative;
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .slide {
@@ -77,7 +80,6 @@
   display: flex;
   width: 100%;
   height: 100%;
-  gap: 0;
 }
 
 .text-block-1 {
@@ -150,6 +152,7 @@
 .text-block,
 .image-block {
   width: 50%;
+  top: 0;
   padding: 0; /* Убираем внутренние отступы */
   margin: 0; /* Убираем внешние отступы */
 }
