--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,74 @@
   opacity: 1;
   color: white;
 }
+
+.menu__mobile {
+  position: relative;
+
+  display: none;
+}
+.menu__mobile_button {
+  position: relative;
+
+  width: 40px;
+  height: 26px;
+
+  cursor: pointer;
+
+  background-color: transparent;
+}
+.menu__mobile_button.active span {
+  opacity: 0;
+}
+.menu__mobile_button.active.menu__mobile_button:before,
+.menu__mobile_button.active.menu__mobile_button:after {
+  top: 40%;
+}
+.menu__mobile_button.active.menu__mobile_button:before {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.menu__mobile_button.active.menu__mobile_button:after {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.menu__mobile_button span,
+.menu__mobile_button:before,
+.menu__mobile_button:after {
+  position: absolute;
+
+  display: block;
+
+  width: 100%;
+  height: 6px;
+
+  opacity: 1;
+  border-radius: 6px;
+  background-color: #1e272e;
+}
+.menu__mobile_button:before,
+.menu__mobile_button:after {
+  content: "";
+  -webkit-transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1);
+          transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1);
+          transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), transform 0.35s cubic-bezier(0.23, 1, 0.32, 1);
+          transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.menu__mobile_button span {
+  top: 50%;
+
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.menu__mobile_button:before {
+  top: 0;
+}
+.menu__mobile_button:after {
+  top: calc(100% - 6px);
+}
 .header {
   position: fixed;
   z-index: 1000;
@@ -600,6 +668,7 @@
 .carousel:hover .controls {
   opacity: 1;
 }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -609,4 +678,24 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+}
+
+@media (max-width: 767.8px) {
+  .menu__mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+  }
+}
+
+@media (max-width: 575.8px) {
+  .menu__mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+
+    margin: 0 20px;
+  }
 }
