--- a/assets/scss/header/_header-menu.scss
+++ b/assets/scss/header/_header-menu.scss
@@ -1,3 +1,6 @@
+@use 'skin' as *;
+@use 'variables' as *;
+@use 'mixins-media' as *;
 .menu {
   display: flex;
   align-items: center;
@@ -112,6 +115,93 @@
       color: white;
       opacity: 1;
       transition: color 0.3s ease;
+    }
+  }
+}
+.menu__mobile {
+  position: relative;
+  display: none;
+  // align-items: center;
+  // justify-content: center;
+  // height: 100vh;
+  // width: 40px;
+  // height: 30px;
+  // margin: 0 20px;
+
+  @include md {
+    display: flex;
+    // margin-left: 0;
+    justify-content: space-around;
+  }
+
+  @include sm {
+    display: flex; // Показываем на sm\
+    margin: 0 20px;
+  }
+
+  &_button {
+    position: relative;
+    height: 26px;
+    width: 40px;
+    cursor: pointer;
+    background-color: transparent;
+
+    // @include lg {
+    //   display: none; // Скрываем на lg и выше
+    // }
+
+    // @include md {
+    //   display: flex;
+    //   margin-left: 0;
+    // }
+
+    // @include sm {
+    //   margin: 0 20px !important;
+    //   background: red;
+    // }
+    &.active {
+      span {
+        opacity: 0;
+      }
+      &.menu__mobile_button:before,
+      &.menu__mobile_button:after {
+        top: 40%;
+      }
+      &.menu__mobile_button:before {
+        transform: rotate(45deg);
+      }
+      &.menu__mobile_button:after {
+        transform: rotate(-45deg);
+      }
+    }
+
+    span,
+    &:before,
+    &:after {
+      display: block;
+      position: absolute;
+      height: 6px;
+      width: 100%;
+      background-color: #1e272e;
+      border-radius: 6px;
+      opacity: 1;
+    }
+    &:before,
+    &:after {
+      content: '';
+      transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1),
+        transform 0.35s cubic-bezier(0.23, 1, 0.32, 1);
+    }
+
+    span {
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    &:before {
+      top: 0;
+    }
+    &:after {
+      top: calc(100% - 6px);
     }
   }
 }
