--- a/assets/scss/header/_header-menu.scss
+++ b/assets/scss/header/_header-menu.scss
@@ -9,6 +9,11 @@
   height: 100px;
   padding: 0 20px;
 
+  @include md {
+    height: 60px; // Уменьшаем высоту меню
+    padding: 0 5px; // Уменьшаем внутренние отступы
+  }
+
   .menu-item {
     color: white !important;
     font-weight: bold;
@@ -76,11 +81,22 @@
 
 /* Контейнер поиска */
 .header-search {
+  // display: flex;
+  // flex-direction: column;
+  // align-items: flex-end;
+  // position: relative;
+  // width: 180px;
+
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   position: relative;
   width: 180px;
+
+  @include md {
+    position: absolute;
+    left: 70px; // Подвигаем правее от бургера
+    width: auto;
+  }
 
   .search-line {
     width: 200px;
@@ -88,6 +104,10 @@
     background: white;
     position: absolute;
     bottom: -20px;
+
+    @include md {
+      display: none;
+    }
   }
 
   .search-btn {
@@ -97,6 +117,11 @@
     color: white;
     font-size: 18px;
     cursor: pointer;
+
+    @include md {
+      position: static;
+      margin-left: 10px; // Двигаем лупу ближе к бургеру
+    }
   }
 
   .search-input {
@@ -110,6 +135,10 @@
     outline: none;
     position: absolute;
     bottom: -10px;
+
+    @include md {
+      display: none;
+    }
 
     &::placeholder {
       color: white;
@@ -130,8 +159,10 @@
 
   @include md {
     display: flex;
-    // margin-left: 0;
-    justify-content: space-around;
+    position: absolute;
+    left: 20px; // Бургер влево
+    top: 50%;
+    transform: translateY(-50%);
   }
 
   @include sm {
@@ -146,19 +177,6 @@
     cursor: pointer;
     background-color: transparent;
 
-    // @include lg {
-    //   display: none; // Скрываем на lg и выше
-    // }
-
-    // @include md {
-    //   display: flex;
-    //   margin-left: 0;
-    // }
-
-    // @include sm {
-    //   margin: 0 20px !important;
-    //   background: red;
-    // }
     &.active {
       span {
         opacity: 0;
@@ -180,7 +198,7 @@
     &:after {
       display: block;
       position: absolute;
-      height: 6px;
+      height: 4px;
       width: 100%;
       background-color: #1e272e;
       border-radius: 6px;
@@ -201,7 +219,7 @@
       top: 0;
     }
     &:after {
-      top: calc(100% - 6px);
+      top: calc(100% - 4px);
     }
   }
 }
